--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,46 @@
 
   <name>Hugger</name>
 
+  <developers>
+    <developer>
+      <name>Noa</name>
+      <url>https://noae.ca</url>
+      <email>code@noae.ca</email>
+    </developer>
+  </developers>
+
+  <licenses>
+    <license>
+      <name>BSD-3-Clause</name>
+      <url>https://opensource.org/license/BSD-3-clause</url>
+      <distribution>repo</distribution>
+      <comments>BSD 3-Clause "New" or "Revised" License</comments>
+    </license>
+  </licenses>
+
+  <scm>
+    <connection>scm:git:https://github.com/noaether/hugger-mirror</connection>
+    <developerConnection>scm:git:noae-code@git.hidrive.ionos.com:/users/noae-code/atlas-hugger.git</developerConnection>
+    <tag>HEAD</tag>
+    <url>https://github.com/noaether/hugger-mirror</url>
+  </scm>
+
   <properties>
-    <java.version>1.8</java.version>
+    <java.version>17</java.version>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
+
+    <dependencies>
+      <dependency>
+        <groupId>org.spigotmc</groupId>
+        <artifactId>spigot-api</artifactId>
+        <version>1.20.6-R0.1-SNAPSHOT</version>
+        <scope>provided</scope>
+      </dependency>
+    </dependencies>
 
   <build>
     <plugins>
@@ -40,6 +76,28 @@
           </execution>
         </executions>
       </plugin>
+
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>3.2.1</version>
+        <configuration>
+            <configLocation>checkstyle.xml</configLocation>
+            <consoleOutput>true</consoleOutput>
+            <failsOnError>true</failsOnError>
+            <linkXRef>false</linkXRef>
+        </configuration>
+        <executions>
+            <execution>
+                <?m2e ignore?>
+                <id>validate</id>
+                <phase>validate</phase>
+                <goals>
+                    <goal>check</goal>
+                </goals>
+            </execution>
+        </executions>
+    </plugin>
     </plugins>
     <resources>
       <resource>
@@ -59,13 +117,4 @@
           <url>https://oss.sonatype.org/content/groups/public/</url>
       </repository>
   </repositories>
-
-  <dependencies>
-      <dependency>
-          <groupId>org.spigotmc</groupId>
-          <artifactId>spigot-api</artifactId>
-          <version>1.20.6-R0.1-SNAPSHOT</version>
-          <scope>provided</scope>
-      </dependency>
-  </dependencies>
 </project>
